# playground

./: CMakeLists.txt
cmake/flags/: clang  gcc
exec/: check.c  play.c
scripts/: clean  cleangit  common  make
shaders/: standart.frag  standart.vert
src/: arraylist.c  camera.c  combinations.c  common.c  drawables.c  gl.c  hashset.c  linear.c  shaders.c
src/apps/: simple.c
src/inc/: application.h  arraylist.h  camera.h  combinations.h  common.h  drawables.h  element.h  gl.h  hashset.h  linear.h  shaders.h
src/inc/apps/: simple.h
test/: stuff.c
